--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -331,3 +331,5 @@ show_all=Show all
 average_sum_org_unit=Average (sum in org unit hierarchy)
 last=Last value
 last_average_org_unit=Last value (average in org unit hierarchy)
+most_common_users_matching=Most common users matching
+other_users_matching=Other users matching
