--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -279,6 +279,7 @@ back_to_today=Back to today
 no_interpretations=No interpretations
 interpretations=Interpretations
 comment=Comment
+reply=Reply
 people=people
 like_this=like this
 ago=ago
