--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -332,8 +332,7 @@ show_all=Show all
 average_sum_org_unit=Average (sum in org unit hierarchy)
 last=Last value
 last_average_org_unit=Last value (average in org unit hierarchy)
-most_common_users_matching=Most common users matching
-other_users_matching=Other users matching
+users_matching=Users matching
 subscribe_title=Subscribe to this pivot table and start receiving notifications
 unsubscribe_title=Unsubscribe from this pivot table and stop receiving notifications
 subscribe_toggle_error=There was an error when updating the subscription status
