--- a/i18n/i18n_app_vi.properties
+++ b/i18n/i18n_app_vi.properties
@@ -331,5 +331,4 @@ show_all=Hi\u1EC3n th\u1ECB t\u1EA5t c\u1EA3
 average_sum_org_unit=Average (sum in org unit hierarchy)
 last=Last value
 last_average_org_unit=Last value (average in org unit hierarchy)
-most_common_users_matching=Most common users matching
-other_users_matching=Other users matching
+users_matching=Users matching
