Add translation for sharing validations

--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -339,3 +339,5 @@ subscribe_toggle_error=There was an error when updating the subscription status
 favorite_title=Mark as favorite
 unfavorite_title=Unmark as favorite
 favorite_toggle_error=There was an error when updating the favorite status
+validation_error_object_sharing=Sharing of the object should include all sharings of its interpretations
+validation_error_interpretation_sharing=Sharing of the interpretation should be a subset of the parent object sharing
