Add translations for mentions access

--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -339,3 +339,4 @@ subscribe_toggle_error=There was an error when updating the subscription status
 favorite_title=Mark as favorite
 unfavorite_title=Unmark as favorite
 favorite_toggle_error=There was an error when updating the favorite status
+user_cannot_view=user cannot view
