--- a/i18n/i18n_app_uk.properties
+++ b/i18n/i18n_app_uk.properties
@@ -122,7 +122,7 @@ data_sets_cannot_be_specified_as_filter=\u041D\u0430\u0431\u043E\u0440\u0438 \u0
 share=\u041F\u043E\u0434\u0456\u043B\u0438\u0442\u0438\u0441\u044F
 interpretation=\u0456\u043D\u0442\u0435\u0440\u043F\u0440\u0435\u0442\u0430\u0446\u0456\u044F
 write_your_interpretation=\u041D\u0430\u043F\u0438\u0441\u0430\u0442\u0438 \u043A\u043E\u043C\u0435\u043D\u0442\u0430\u0440, \u043F\u0438\u0442\u0430\u043D\u043D\u044F \u0447\u0438 \u0456\u043D\u0442\u0435\u0440\u043F\u0440\u0435\u0442\u0430\u0446\u0456\u044E
-legend_set=\u0423\u043C\u043E\u0432\u043D\u0456 \u043F\u043E\u0437\u043D\u0430\u0447\u0435\u043D\u043D\u044F
+legend_set=\u041D\u0430\u0431\u0456\u0440 \u0443\u043C\u043E\u0432\u043D\u0438\u0445 \u043F\u043E\u0437\u043D\u0430\u0447\u0435\u043D\u044C
 legend_colorize_target=Legend colorize target
 select_organisation_units=\u041E\u0431\u0440\u0430\u0442\u0438 \u043F\u0456\u0434\u0440\u043E\u0437\u0434\u0456\u043B\u0438 \u043E\u0440\u0433\u0430\u043D\u0456\u0437\u0430\u0446\u0456\u0457
 select_boundaries_and_levels=\u041E\u0431\u0440\u0430\u0442\u0438 \u043C\u0435\u0436\u0456 \u0442\u0430 \u0440\u0456\u0432\u043D\u0456
@@ -149,7 +149,7 @@ financial_april=\u0424\u0456\u043D\u0430\u043D\u0441\u043E\u0432\u0438\u0439 \u0
 plugin_config=\u041A\u043E\u043D\u0444\u0456\u0433\u0443\u0440\u0430\u0446\u0456\u044F \u043F\u043B\u0430\u0491\u0456\u043D\u0430
 default_=\u0417\u0430 \u0437\u0430\u043C\u043E\u0432\u0447\u0443\u0432\u0430\u043D\u043D\u044F\u043C
 aggregation_type=\u0422\u0438\u043F \u0430\u0433\u0440\u0435\u0433\u0430\u0446\u0456\u0457
-number_type=Number type
+number_type=\u0422\u0438\u043F \u0447\u0438\u0441\u043B\u0430
 count=\u041F\u0456\u0434\u0440\u0430\u0445\u0443\u043D\u043E\u043A
 sum=\u0421\u0443\u043C\u0430
 by_data_element=\u0417\u0430 \u0435\u043B\u0435\u043C\u0435\u043D\u0442\u043E\u043C \u0434\u0430\u043D\u0438\u0445
@@ -178,7 +178,7 @@ created_by=\u0421\u0442\u0432\u043E\u0440\u0435\u043D\u043E
 initializing=\u0417\u0430\u043F\u0443\u0441\u043A
 clear_pivot_table=\u041E\u0447\u0438\u0441\u0442\u0438\u0442\u0438 \u0437\u0432\u0435\u0434\u0435\u043D\u0443 \u0442\u0430\u0431\u043B\u0438\u0446\u044E
 this_financial_year=\u041F\u043E\u0442\u043E\u0447\u043D\u0438\u0439 \u0444\u0456\u043D\u0430\u043D\u0441\u043E\u0432\u0438\u0439 \u0440\u0456\u043A
-user_sub_units=User sub-units
+user_sub_units=\u041E\u0434\u0438\u043D\u0438\u0446\u0456 \u043F\u0456\u0434\u0440\u043E\u0437\u0434\u0456\u043B\u0456\u0432 \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456\u0432
 user_sub_x2_units=User sub-x2-units
 metadata_id_scheme=Meta-data ID scheme
 this_week=\u041F\u043E\u0442\u043E\u0447\u043D\u0438\u0439 \u0442\u0438\u0436\u0434\u0435\u043D\u044C
@@ -279,6 +279,7 @@ back_to_today=\u041D\u0430\u0437\u0430\u0434 \u0434\u043E \u0441\u044C\u043E\u04
 no_interpretations=\u041D\u0435\u043C\u0430\u0454 \u0456\u043D\u0442\u0435\u0440\u043F\u0440\u0435\u0442\u0430\u0446\u0456\u0439
 interpretations=\u0406\u043D\u0442\u0435\u0440\u043F\u0440\u0435\u0442\u0430\u0446\u0456\u0457
 comment=\u041A\u043E\u043C\u0435\u043D\u0442\u0430\u0440
+reply=Reply
 people=\u043B\u044E\u0434\u0438
 like_this=\u0446\u0435 \u043F\u043E\u0434\u043E\u0431\u0430\u0454\u0442\u044C\u0441\u044F
 ago=\u0442\u043E\u043C\u0443
@@ -313,8 +314,8 @@ percent_of_column=\u0412\u0456\u0434\u0441\u043E\u0442\u043E\u043A \u0441\u0442\
 legend=\u0423\u043C\u043E\u0432\u043D\u0456 \u043F\u043E\u0437\u043D\u0430\u0447\u0435\u043D\u043D\u044F
 by_data_item=\u0417\u0430 \u0441\u043A\u043B\u0430\u0434\u043E\u0432\u0438\u043C\u0438 \u0434\u0430\u043D\u0438\u0445
 all_data_items=\u0412\u0441\u0456 \u0441\u043A\u043B\u0430\u0434\u043E\u0432\u0456 \u0434\u0430\u043D\u0438\u0445
-apply_legend=Apply legend
-legend_style=Legend style
+apply_legend=\u0417\u0430\u0441\u0442\u043E\u0441\u0443\u0432\u0430\u0442\u0438 \u0443\u043C\u043E\u0432\u043D\u0456 \u043F\u043E\u0437\u043D\u0430\u0447\u0435\u043D\u043D\u044F
+legend_style=\u0421\u0442\u0438\u043B\u044C \u0443\u043C\u043E\u0432\u043D\u0438\u0445 \u043F\u043E\u0437\u043D\u0430\u0447\u0435\u043D\u044C
 bimonths_this_year=\u0429\u043E\u0434\u0432\u0430 \u043C\u0456\u0441\u044F\u0446\u0456 \u043F\u043E\u0442\u043E\u0447\u043D\u043E\u0433\u043E \u0440\u043E\u043A\u0443
 weeks_this_year=\u0422\u0438\u0436\u043D\u0456 \u043F\u043E\u0442\u043E\u0447\u043D\u043E\u0433\u043E \u0440\u043E\u043A\u0443
 quarters_this_year=\u041A\u0432\u0430\u0440\u0442\u0430\u043B\u0438 \u043F\u043E\u0442\u043E\u0447\u043D\u043E\u0433\u043E \u0440\u043E\u043A\u0443
@@ -331,5 +332,10 @@ show_all=\u041F\u043E\u043A\u0430\u0437\u0430\u0442\u0438 \u0432\u0441\u0435
 average_sum_org_unit=Average (sum in org unit hierarchy)
 last=Last value
 last_average_org_unit=Last value (average in org unit hierarchy)
-most_common_users_matching=Most common users matching
-other_users_matching=Other users matching
+users_matching=Users matching
+subscribe_title=Subscribe to this pivot table and start receiving notifications
+unsubscribe_title=Unsubscribe from this pivot table and stop receiving notifications
+subscribe_toggle_error=There was an error when updating the subscription status
+favorite_title=Mark as favorite
+unfavorite_title=Unmark as favorite
+favorite_toggle_error=There was an error when updating the favorite status
