--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -341,3 +341,8 @@ unfavorite_title=Unmark as favorite
 favorite_toggle_error=There was an error when updating the favorite status
 validation_error_object_sharing=Sharing of the object should include all sharings of its interpretations
 validation_error_interpretation_sharing=Sharing of the interpretation should be a subset of the parent object sharing
+biweekly=Bi-weekly
+biweeks=Bi-weeks
+this_biweek=This bi-week
+last_biweek=Last bi-week
+last_4_biweeks=Last 4 bi-weeks
